--- a/Frontend/css/panelDeOrdenes.css
+++ b/Frontend/css/panelDeOrdenes.css
@@ -203,6 +203,8 @@ body {
     font-weight: 700;
     color: #fff;
     line-height: 1;
+    text-align: center;
+    margin-left: 4px;
 }
 
 /* Colores de estados */
@@ -211,9 +213,11 @@ body {
   color: #3b2a05;
 }
 
-.badge.inprogress {
+.badge.progress {
+  height: 1.3rem;
   background: var(--progress);
   color: #fff;
+  
 }
 
 .badge.ready {
@@ -230,9 +234,6 @@ body {
   background: var(--cancel);
   color: #fff;
 }
-
-
-
 
 /*---------- ETIQUETAS ---------------*/
 .filtros .form-label {
@@ -309,7 +310,6 @@ body {
 .btn-filtrar {
   background: linear-gradient(135deg, #f39c12, #e67e22);
   color: #fff;
-  box-shadow: 0 4px 12px rgba(243,156,18,0.35);
 }
 
 .btn-filtrar:hover {
@@ -403,13 +403,17 @@ body {
 }
 
 .modal-overlay {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    backdrop-filter: blur(3px);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.5);
+  z-index: 1000;
+  top: 0;
+  left: 0;
 }
-
+.modal-content {
+  z-index: 1001;
+}
 .modal-content {
     background: var(--card);
     border-radius: var(--radius);
@@ -511,9 +515,13 @@ body {
 
 /* GRIDS DE PLATOS */
 .grid-platos {
-    display: flex;
+    display: grid;
     flex-direction: column;
     gap: 12px;
+    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+    margin-top: 12px;
+    justify-content: center; /* centra las cards si hay pocas */
+    
 }
 
 /* ITEM PLATO ACTUAL */
@@ -682,3 +690,4 @@ body {
   font-size: 1.5rem;
   cursor: pointer;
 }
+
